https://jira.deutsche-digitale-bibliothek.de/browse/DDBNEXT-309: fixed text alignment for long titles

--- a/web-app/css/item-hierarchy.css
+++ b/web-app/css/item-hierarchy.css
@@ -120,7 +120,7 @@
 
 .item-hierarchy-result .label {
   display: block;
-  margin-left: 30px;
+  margin-left: 50px;
 }
 
 /* highlight the current path */
